# OpenChart

./: CMakeLists.txt  README.md  openCharts.pro  openchart.pri
CMake/: OpenChartConfig.cmake.in
sources/: openchart.cpp  openchartplugin.cpp  qchartpiece.cpp
